# matrix-workers

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  SELF-HOSTED.md  bunfig.toml  docker-compose.yml  livekit.yaml  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
data/media/: 0yuSdiDOHoJjFg-5o_YaVx-EJmlHIGBT.meta.json  5nC_Zih_lXR1dHvx1tBflYoZdpPy90do.meta.json  7VOla3oDZPzWy3sczbw8980EsrohkyxD  7VOla3oDZPzWy3sczbw8980EsrohkyxD.meta.json  80zZ-vhTWEcCwsRcDbam9131CDc7Ip1a  80zZ-vhTWEcCwsRcDbam9131CDc7Ip1a.meta.json  976tb8vu4iBbl3z3dgem0TMtj_4GPIK5  976tb8vu4iBbl3z3dgem0TMtj_4GPIK5.meta.json  BAsOEiQp8oaCpDZdXHDvw2hBllM6wcGw  BAsOEiQp8oaCpDZdXHDvw2hBllM6wcGw.meta.json  D9Zl8-dU25cNU2BcbtMQOUiSsxPTXnjq  D9Zl8-dU25cNU2BcbtMQOUiSsxPTXnjq.meta.json  DNH2EmIyPs2PO1f2ehQ6xiZOaDKhkR3z  DNH2EmIyPs2PO1f2ehQ6xiZOaDKhkR3z.meta.json  Da69Z7EaWSKM5pzegYawtOfhwzEWuUdb  Da69Z7EaWSKM5pzegYawtOfhwzEWuUdb.meta.json  FA1cGMohpEN7r6g52b0EcM1lOzVquR3z  FA1cGMohpEN7r6g52b0EcM1lOzVquR3z.meta.json  FbrCqJiOTOjwKnt_fHCJOFWP4EN9IEfy  FbrCqJiOTOjwKnt_fHCJOFWP4EN9IEfy.meta.json  H4jvS85NqjjWQ6Q-OHP9ijaUwVui82Fu  (+39 more)
migrations/: 002_self_hosted.sql
minicpm-livekit-agent/: README.md  agent.py  pyproject.toml  test.html
plan/: libsql_migration_plan.md
qwen-livekit-agent/: README.md  agent.ts  diag.ts  package-lock.json  package.json  test.html
scripts/: check-as.ts  grant-admin.ts  migrate-libsql.ts  register-as.ts  seed.ts
src/: index.ts  preload.ts  server.ts
tests/: matrix-client.test.ts  media-storage.test.ts  test-livekit.test.ts  test-livekit.ts  workflow.test.ts
(+59 files in other folders)
